--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,14 +52,21 @@ dependencies:
   # Polar BLE
   polar: ^7.6.0
 
+  # Health / Steps
+  health: ^13.1.4
+
   # Calendar
   table_calendar: ^3.1.2
 
   # Wakelock
   wakelock_plus: ^1.2.5
 
+  # URL launcher & Android intents
+  url_launcher: ^6.2.0
+  android_intent_plus: ^5.0.2
+
   # Utils
-  intl: ^0.19.0
+  intl: ^0.20.2
   uuid: ^4.4.2
 
 dev_dependencies:
